[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy_Turret.gd" type="Script" id=1]
[ext_resource path="res://Assets/kenney_topdowntanksredux/PNG/Default size/Tank Effects/shotLarge.png" type="Texture" id=2]
[ext_resource path="res://Assets/kenney_topdowntanksredux/PNG/Default size/Tank Barrels/specialBarrel1_outline.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 180.044

[node name="Enemy_Turret" type="Sprite"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 0, 4.4 )
script = ExtResource( 1 )

[node name="Shot_Cooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="Entry" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Shot_Effect_Cooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 1 )

[node name="SightLine" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 180 )

[node name="Shot_Delay" type="Timer" parent="."]
one_shot = true

[node name="Shot_Delay2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Shot_Cooldown" to="." method="_on_Shot_Cooldown_timeout"]
[connection signal="timeout" from="Shot_Effect_Cooldown" to="." method="_on_Shot_Effect_Cooldown_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="Shot_Delay" to="." method="_on_Shot_Delay_timeout"]
[connection signal="timeout" from="Shot_Delay2" to="." method="_on_Shot_Delay2_timeout"]
